# GenOMA-Geneial-Ontology-Mapping-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  eva.ipynb  gc.xlsx  main.py  pyproject.toml  requirements-analysis.txt  requirements-server.txt  requirements.txt  run.py  samconfig.toml.example  template.yaml  test.ipynb  test_LLM_score.ipynb
.github/: copilot-instructions.md
experiments/: ablation_nodes.py  builder_without_rank_node.py  builder_without_retry_node.py  builder_without_validate_node.py  eva.ipynb  test.ipynb  test_nodes_without_test.ipynb
notebooks/: mapped_gc.xlsx  test.ipynb  test_nodes_without_test.ipynb
src/: agents.py  handler.py  requirements.txt
src/agents/: agents.py  llm.py
src/config/: agents.py
src/graph/: agent_config.py  builder.py  builder_without_rank_node.py  builder_without_retry_node.py  builder_without_validate_node.py  nodes.py  types.py
src/prompts/: evaluate_specificity_with_llm.md  extract_medical_term_checkbox_from_survey.md  extract_medical_term_from_survey.md  extract_medical_term_radio_from_survey.md  extract_medical_term_short_from_survey.md  is_mappable.md  normalize_extracted_terms.md  rank_evaluate_with_llm.md  rank_mappings.md  re_extract_medical_term.md  refine_mapping.md  retry_with_llm_rewrite.md  template.py  umls_mapper.md  validate_mapping.md
src/tools/: flatten_names.py  refinement_tools.py  simple_cui_resolver.py  umls_tools.py  ums_api.py
ulms_test/: run.py
ulms_test/src/config/: agents.py
ulms_test/src/graph/: builder.py  nodes.py
ulms_test/src/prompts/: is_mappable.md
