[project]
name = "genoma-agent"
version = "0.1.0"
description = "A modular agent system for mapping clinical or survey questions to standardized biomedical ontologies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=0.2",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tiktoken>=0.5",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
analysis = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
]
