[project]
name = "genoma-agent"
version = "0.1.0"
description = "A modular agent system for mapping clinical or survey questions to standardized biomedical ontologies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-aws>=1.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "requests>=2.32.5",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]
analysis = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
]
